--- a/src/app/feed/feed-detail/feed-detail.component.html
+++ b/src/app/feed/feed-detail/feed-detail.component.html
@@ -6,14 +6,14 @@
 
     <div class="text-wrap">
       <div class="left-text">
-        <h3>{{detail.data["portfolio-video"]?.video_title.value["0"].text}}</h3>
-        <h3>{{detail.data["portfolio-video"]?.video_year.value["0"].text}}</h3>
+        <p>{{detail.data["portfolio-video"]?.video_title.value["0"].text}}</p>
+        <p>{{detail.data["portfolio-video"]?.video_year.value["0"].text}}</p>
       </div>
 
       <div class="right-text">
-        <h3>{{detail.data["portfolio-video"]?.director_credits.value["0"].text}}</h3>
-        <h3>{{detail.data["portfolio-video"]?.dp_credits.value["0"].text}}</h3>
-        <h3>{{detail.data["portfolio-video"]?.producer_credits.value["0"].text}}</h3>
+        <p>{{detail.data["portfolio-video"]?.director_credits.value["0"].text}}</p>
+        <p>{{detail.data["portfolio-video"]?.dp_credits.value["0"].text}}</p>
+        <p>{{detail.data["portfolio-video"]?.producer_credits.value["0"].text}}</p>
       </div>
     </div>
 
