--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -8,20 +8,23 @@ $font-weight-heavy: 900;
 
 
 // ........................................................FONT SIZES
-$font-size-h1:30px;
-$font-size-h2:22px;
-$font-size-h3:14px;
-$font-size-p: 10px;
+$font-size-h1:49px;
+$font-size-h2:36px;
+$font-size-h3:25px;
+$font-size-h4:18px;
+$font-size-p: 14px;
 
-$font-size-h1-mobile: 25px;
-$font-size-h2-mobile: 20px;
-$font-size-h3-mobile: 18px;
+$font-size-h1-mobile: 36px;
+$font-size-h2-mobile: 30px;
+$font-size-h3-mobile: 22px;
+$font-size-h4-mobile: 18px;
 $font-size-p-mobile: 12px;
 
 // ........................................................FONT FAMILIES
 $font-family-h1: 'avus';
 $font-family-h2: 'avus';
 $font-family-h3: 'avus';
+$font-family-h4: 'avus';
 $font-family-p: helvetica;
 
 
@@ -29,12 +32,14 @@ $font-family-p: helvetica;
 // ........................................................FONT LINEHEIGHTS
 $line-height-h1: 50px;
 $line-height-h2: 36px;
-$line-height-h3: 30px;
-$line-height-p: 26px;
+$line-height-h3: 38px;
+$line-height-h4: 28px;
+$line-height-p: 19px;
 
 $line-height-h1-mobile: 40px;
 $line-height-h2-mobile: 36px;
 $line-height-h3-mobile: 20px;
+$line-height-h4-mobile: 20px;
 $line-height-p-mobile: 17px;
 
 
