--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,16 +2,16 @@
   <div class="text-wrap">
 
     <div class="about-block">
-      <h2>Background</h2>
+      <h3>Background</h3>
       <div class="about-text">
         <p>{{feed.results["0"].data.information.background.value["0"].text}}</p>
       </div>
     </div>
 
     <div class="about-block">
-      <h2>{{feed.results["0"].data.information.body.value["0"]["non-repeat"]["section-title"].value["0"].text}}</h2>
+      <h3>{{feed.results["0"].data.information.body.value["0"]["non-repeat"]["section-title"].value["0"].text}}</h3>
       <div class="about-list">
-        <ul>
+        <ul [ngClass]="columnWrap()">
           <li *ngFor="let item of feed.results['0'].data.information.body.value['0'].repeat">
             {{ item["client-name"].value["0"].text }}
           </li>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="about-block">
-      <h2>{{feed.results["0"].data.information.body.value[1]["non-repeat"]["section-title"].value["0"].text}}</h2>
+      <h3>{{feed.results["0"].data.information.body.value[1]["non-repeat"]["section-title"].value["0"].text}}</h3>
       <div class="about-list">
         <ul>
           <li *ngFor="let item of feed.results['0'].data.information.body.value[1].repeat">
