--- a/src/app/styles/mixins.scss
+++ b/src/app/styles/mixins.scss
@@ -526,6 +526,17 @@ $transition-slow: 1s;
   }
 }
 
+@mixin h4(){
+  font-size: $font-size-h4!important;
+  line-height: $line-height-h4;
+  font-family: $font-family-h4;
+  letter-spacing: $letter-spacing-h3;
+  @include respond-to(phone){
+    font-size: $font-size-h4-mobile;
+    line-height: $line-height-h4-mobile;
+  }
+}
+
 @mixin p(){
   font-size: $font-size-p;
   line-height: $line-height-p;
