--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -20,8 +20,7 @@ svg{
   position: fixed;
   height: 100vh;
   width: 100vw;
-  // background-color: $dark-grey;
-  background-color: pink;
+  background-color: $dark-grey;
   // background: no-repeat center center fixed;
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
