loadtime without svg test

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,4 +1,4 @@
-<app-svg></app-svg>
+<!-- <app-svg></app-svg> -->
 
 <!-- <div *ngIf="feed" class="background-image" [ngStyle]="{'background' : 'url(' + bgImgStem + ') no-repeat center center fixed'}"> -->
 <div class="background-image">
