--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,10 @@
+
+
 <div class="about" *ngIf="feed">
   <div class="text-wrap">
 
     <div class="about-block">
-      <h3>Background</h3>
+      <h3>background</h3>
       <div class="about-text">
         <p>{{feed.results["0"].data.information.background.value["0"].text}}</p>
       </div>
