--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,17 @@
 html{
   background-color: #000000;
 }
+
+:host {
+  display: flex;
+  overflow: hidden;
+  height: 100vh;
+  main {
+    position: relative;
+  }
+  /deep/ router-outlet ~ * {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+}
