--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,4 +1,4 @@
-<div class="logo">
+<div class="logo" [@fadeInAnimation]>
   <a [routerLink]="['/']" class="nav-a" [class.nav_active]="route === '/'" >
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     width="188.947px" height="896.221px" viewBox="0 0 188.947 896.221" enable-background="new 0 0 188.947 896.221" xml:space="preserve">
