--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -25,20 +25,21 @@
       height:100%;
       line-height: auto;
       vertical-align: middle;
-      transition: margin 0.5s ease;
-      -webkit-transition: margin 0.5s ease;
-      -moz-transition: margin 0.5s ease;
-      -ms-transition: margin 0.5s ease;
-      -o-transition: margin 0.5s ease;
+      transition: all 0.5s ease;
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
       font-size: $font-size-h3;
       color: $red;
       @include h2();
       &:hover{
-        margin-left: 5px;
+        // margin-left: 5px;
         color: $electric-blue;
       }
       &.nav_active{
-        margin-left: 5px!important;
+        // margin-left: 5px!important;
+        color: $electric-blue;
       }
     }
   }
