--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -47,3 +47,18 @@
     }
   }
 }
+
+@media (max-width: $break-phone-landscape) {
+  .text-wrap[_ngcontent-c4] {
+      width: 100vw;
+      padding: $margin-sides;
+  }
+
+  .about-block[_ngcontent-c4] {
+    &:first-of-type{
+      margin-top: 7em;
+    }
+    margin: 0rem 0rem;
+    margin-top: 3rem;
+  }
+}
