--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
 <nav class="nav">
    <!-- (mouseenter)='openNav()' (mouseout)='closeNav()' -->
   <ul class="nav-ul">
-     <!-- [@navUlState]="isNav" -->
     <li class="nav-li" >
-       <!-- [@navLiState]="isNav" -->
+      <a [routerLink]="['/portfolio']" class="nav-a" [class.nav_active]="route === '/portfolio'" >Featured Work</a>
+    </li>
+    <li class="nav-li" >
       <a [routerLink]="['/about']" class="nav-a" [class.nav_active]="route === '/about'" >?</a>
     </li>
 
