--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -2,5 +2,9 @@
 @font-face {
     font-family: avus;
     src: url('/assets/fonts/AvusPro.ttf') format('truetype');
-    // , url('/assets/fonts/didot/Didot.otf') format('otf')
+}
+
+@font-face {
+    font-family: errata;
+    src: url('/assets/fonts/errata.otf') format('opentype');
 }
