--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -5,18 +5,30 @@
 
 .logo{
   position: fixed;
-  width: 100px;
-  height: 200px;
-  bottom: 30px;
-  left: 30px;
+  width: auto;
+  height: auto;
+  bottom: $margin-sides;
+  left: $margin-sides;
   margin-left: 0;
   margin-top: 0;
   z-index: $z-nav;
-  svg{
-    display: block;
-    width:100%;
-    height: 100%;
-    display: block;
-    padding-right: 40px;
+  font-family: 'errata', sans-serif;
+  h3{
+    line-height: 20px;
   }
+}
+
+
+@media (max-width: $break-phone-landscape) {
+  .logo{
+    top: $margin-sides;
+    left: 0;
+    width: 100vw;
+    text-align: center;
+
+    h3{
+      font-size: 25px;
+    }
+  }
+
 }
