--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,5 +1,5 @@
 <div class="logo" [@fadeInAnimation]>
-  <a [routerLink]="['/']" class="nav-a" [class.nav_active]="route === '/'" >
+  <a [routerLink]="['/']" class="nav-a" >
     <h3 class="logo">Anne Alexander</h3>
   </a>
 </div>
