--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -61,7 +61,7 @@
     text-align: center;
     width: 100vw;
     z-index: 15;
-    background-color: black;
+    // background-color: black;
     height: 60px;
     padding-top: 20px;
 
