--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -9,6 +9,11 @@
   text-align: right;
   z-index:$z-nav;
 }
+
+.nav_black{
+  background-color: black;
+}
+
 .nav-ul{
   width:100%;
   display: block;
@@ -62,8 +67,8 @@
     width: 100vw;
     z-index: 15;
     // background-color: black;
-    height: 60px;
-    padding-top: 20px;
+    height: 50px;
+    padding-top: 10px;
 
   }
   .nav-ul{
