changed nav spelling

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
    <!-- (mouseenter)='openNav()' (mouseout)='closeNav()' -->
   <ul class="nav-ul">
     <li class="nav-li" >
-      <a [routerLink]="['/portfolio']" class="nav-a" [class.nav_active]="route === '/portfolio'" >Featured Work</a>
+      <a [routerLink]="['/portfolio']" class="nav-a" [class.nav_active]="route === '/portfolio'" >featured work</a>
     </li>
     <li class="nav-li" >
       <a [routerLink]="['/about']" class="nav-a" [class.nav_active]="route === '/about'" >?</a>
