--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -32,7 +32,7 @@ svg{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3em;
+  padding: 0;
 
   h1{
     width: 100vw;
