--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,17 +1,15 @@
 /*....................................SCSS VARIABLES..................................*/
 
-
 // ........................................................FONT WEIGHTS
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-heavy: 900;
 
-
 // ........................................................FONT SIZES
-$font-size-h1:49px;
-$font-size-h2:36px;
-$font-size-h3:25px;
-$font-size-h4:18px;
+$font-size-h1: 49px;
+$font-size-h2: 36px;
+$font-size-h3: 25px;
+$font-size-h4: 18px;
 $font-size-p: 14px;
 
 $font-size-h1-mobile: 36px;
@@ -21,13 +19,11 @@ $font-size-h4-mobile: 18px;
 $font-size-p-mobile: 12px;
 
 // ........................................................FONT FAMILIES
-$font-family-h1: 'avus';
-$font-family-h2: 'avus';
-$font-family-h3: 'avus';
-$font-family-h4: 'avus';
+$font-family-h1: "avus";
+$font-family-h2: "avus";
+$font-family-h3: "avus";
+$font-family-h4: "avus";
 $font-family-p: helvetica;
-
-
 
 // ........................................................FONT LINEHEIGHTS
 $line-height-h1: 50px;
@@ -42,57 +38,48 @@ $line-height-h3-mobile: 20px;
 $line-height-h4-mobile: 20px;
 $line-height-p-mobile: 17px;
 
-
 $letter-spacing: 1px;
 $letter-spacing-h1: 2px;
 $letter-spacing-h2: 0px;
 $letter-spacing-h3: 1px;
-$letter-spacing-paragraph:1px;
-
+$letter-spacing-paragraph: 1px;
 
 // ........................................................COLORS
 
-$red:#FF3700;
-$black:#000;
-$white:#FFF;
-$light-grey:#F0F0F0;
-$dark-grey:#272626;
-$electric-blue:#00C8FF;
+$red: #ff3700;
+$black: #000;
+$white: #fff;
+$light-grey: #f0f0f0;
+$dark-grey: #272626;
+$electric-blue: #00c8ff;
 
 // ........................................................MARGINS
 $margin-sides: 25px;
 $margin-bottom: 35px;
 $margin-top: 150px;
-$margin-sides-mobile:10px;
-$margin-left-paragraph:5px;
-$margin-top-li:100px;
-$margin-top-p:20px;
+$margin-sides-mobile: 10px;
+$margin-left-paragraph: 5px;
+$margin-top-li: 100px;
+$margin-top-p: 20px;
 
 // ........................................................TRANSITION TIMINGS
 $transition-extreme-slow: 1.4s;
-$transition-slow: .6s;
-$transition-medium: .4s;
-$transition-fast: .2s;
-
-
+$transition-slow: 0.6s;
+$transition-medium: 0.4s;
+$transition-fast: 0.2s;
 
 // ........................................................Z-INDEXES
-$z-nav:15;
-$z-svg:13;
+$z-nav: 15;
+$z-svg: 13;
 
 $z-clickOut: 12;
 // $z-nav:10;
-$z-credits:8;
-$z-feed:7;
+$z-credits: 8;
+$z-feed: 7;
 
-$z-detail-li:4;
-$z-detail-cover:3;
+$z-detail-li: 4;
+$z-detail-cover: 3;
 
-
-
-$z-logo:0;
-
-
-
+$z-logo: 0;
 
 /*....................................................................................*/
